{
    "name": "ArcadeInputActions",
    "maps": [
        {
            "name": "Driving",
            "id": "9c4ca80c-d674-47ed-b67e-fb6d53e1d295",
            "actions": [
                {
                    "name": "Accelerate",
                    "type": "Value",
                    "id": "a21cb5d7-a94c-4dda-ae41-9abcd50013a3",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Turn",
                    "type": "Value",
                    "id": "a2d26ff0-ddc3-40c5-84a2-e98a3adc38e4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Honk",
                    "type": "Button",
                    "id": "ce9b6de5-344e-46c7-8eae-5f392f142d29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Drift",
                    "type": "Button",
                    "id": "274570a1-258a-4cdd-a886-56c5e523870a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RearView",
                    "type": "Button",
                    "id": "d2c9bde4-7167-43ae-9467-bde3f62ab28b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleHeadlights",
                    "type": "Button",
                    "id": "c2e92def-10fc-4d9e-aa2b-b37f27911f8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RestartCheckpoint",
                    "type": "Button",
                    "id": "5f394ddd-b549-41eb-badf-973c93b515bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d67d3086-cc51-4cc8-8be8-b557fe9b0345",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Honk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93a209c7-9520-48a5-8487-32fe9ad74cf8",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Honk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard 1D Axis",
                    "id": "501aec52-41d6-45e3-9f3e-c5d12d4b224e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "899fa1bb-e901-4c87-8ff0-3bf144d65226",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b65416c9-bf30-4b28-9b87-f7c5bf0d8298",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad 1D Axis",
                    "id": "a5ebda3a-71fb-4093-8bda-85aad6ebe506",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c11a81f3-ac69-4c84-8013-c3954246fcbe",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1919175d-ae3b-4d0b-aead-05acac8cbee0",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard 1D Axis",
                    "id": "b5707308-40fb-4d9a-8bf7-ffd736709fff",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5a845a50-4f81-4c45-8553-aa898f222a5b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bf9f94bf-bb78-4a2a-9d9a-bdb1e089ae0f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad 1D Axis",
                    "id": "8b1e5e49-7050-4063-acd8-82726397809a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "873f1815-b5b2-4450-a5ef-e2cdb5964086",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f415518a-5762-4e3f-8e5e-e924804f42f3",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "aa7a13c9-6db6-41a7-9fc1-3ee63098b636",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e07d755b-c1af-4985-9a24-7726a5a68664",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d171a5d-5fc0-4b08-9b63-c0357206874b",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RearView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c00dfae2-722b-4c3b-a266-dfc6a92f72d5",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RearView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b25fda4b-1825-4303-b5a1-0c65ba2d2670",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleHeadlights",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a1ad3cf-63b2-4618-9bf0-0c8383aa00ad",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleHeadlights",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f87fa70-7793-44ab-8ab9-3d4f53b6be2e",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RestartCheckpoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35cde064-c843-411c-a9d7-4c9b052e64ad",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RestartCheckpoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}